# routa

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.claude/: launch.json
docs/: avalone_portal_copy.md  session-prompts-2026-06-18.md
migrations/: env.py
migrations/versions/: 8070ccb67b28_initial_schema.py
scripts/: SWITCH_RUNBOOK.md  check_i18n.py  cleanup_owner_categories.py  merge_owner_categories.py  migrate_legacy_categories.py  migrate_tenant_pk.py  pre_flight.py  seed_all_catalogs.py
src/counta/core/: app_access.py  catalog.py  config.py  constants.py  currency.py  db.py  engine.py  entry_meta.py  global_settings.py  glossary.py  ledger_ops.py  lexicon.py  money.py  notifications.py  notify.py  security.py  sqlledger.py  tenant.py  tips.py  ui_glossary.py
src/counta/web/: app.py
src/routa/core/: app_access.py  app_access_repository.py  app_access_service.py  catalog.py  config.py  constants.py  currency.py  db.py  engine.py  entry_meta.py  external_auth.py  global_settings.py  global_settings_repository.py  global_settings_service.py  glossary.py  glossary_seed.py  ledger_ops.py  lexicon.py  money.py  notifications.py  notify.py  rides.py  security.py  sqlledger.py  tenant.py  tips.py  ui_glossary.py  user_repository.py
tests/: test_api_refactor_smoke.py  test_app_access.py  test_currency.py  test_engine_facade.py  test_entries_filter.py  test_global_settings.py  test_journal_display.py  test_no_junk.py  test_password_reset.py  test_rides.py  test_sqlledger.py  test_tenant_isolation.py  test_verify_email.py
(+46 files in other folders)
