[project]
name = "routa"
version = "0.1.0"
description = "Routa — double-entry bookkeeping in Telegram, with a web dashboard"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "cryptography>=44.0",
    "pydantic-settings>=2.6",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.32",
    "qrcode>=8.2",
    "avalone-core @ file:///Users/lucifer/github-work/avalone.online/src/avalone_core",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/routa"]
